--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 <script type="text/javascript" src="js/boot.js"></script>
 <script type="text/javascript" src="js/load.js"></script>
 <script type="text/javascript" src="js/menu.js"></script>
+<script type="text/javascript" src="js/gameover.js"></script>
 <script type="text/javascript" src="js/play.js"></script>
+<script type="text/javascript" src="js/play2.js"></script>
 <script type="text/javascript" src="js/help.js"></script>
 <script type="text/javascript" src="js/about.js"></script>
+<script type="text/javascript" src="js/continue.js"></script>
+<script type="text/javascript" src="js/levels.js"></script>
 <script type="text/javascript" src="js/game.js"></script>
+
 
 
     
